# thesis-analysis

./: .gitignore  LICENSE  README.md  pyproject.toml
thesis_analysis/: palette_thesis.R  pdf_to_webp.sh  skeletons.R  theme_thesis.R
thesis_analysis/cancer/: cause_to_q.R  nqx.R
thesis_analysis/cancers/: cause_to_mean_age_death.R  cause_to_q.R  main.Rmd  main.qmd  nqx.R  run_q.sh
thesis_analysis/causes/: e0_decompose_age.R  e0_decompose_cause.R  e0_decompose_cause_inequality.R  main.Rmd  main.qmd  period_life_table.R  rescale_mx.R
thesis_analysis/eda/: main.Rmd  main.qmd
thesis_analysis/england/: main.Rmd  main.qmd  mx_agg.py  mx_to_e0.R  period_life_table.R  run_e0.sh
thesis_analysis/london/: main.Rmd  main.qmd
