[tool.poetry]
name = "thesis-analysis"
version = "0.1.0"
description = "PhD thesis analysis"
authors = ["theorashid <theoaorashid@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "thesis_analysis"}]

[tool.poetry.dependencies]
python = "^3.11"
xarray = "^2022.12.0"
pandas = "^1.5.2"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
isort = "^5.11.2"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
